add node_modules to gitignore.  add rollup.config.js

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^0.10.0"
+    "http-server": "^0.10.0",
+    "standard": "^11.0.1"
   },
   "dependencies": {
     "react": "^16.4.2",
