--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.10.0",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-copy-assets": "^1.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
     "standard": "^11.0.1"
   },
   "dependencies": {
