--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rollup -c && http-server",
+    "start": "concurrently \"npm:rollupwatch\" \"npm:serve\" ",
+    "rollupwatch": "rollup -c -w",
+    "serve": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chokidar": "^2.0.4",
     "http-server": "^0.10.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-copy-assets": "^1.0.0",
